// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns correct API url 1`] = `
Object {
  "method": "GET",
  "url": "https://localhost:8883/v2/config/123",
}
`;

exports[`returns correct API url 2`] = `
Object {
  "method": "POST",
  "url": "https://localhost:8883/v2/config/123",
}
`;

exports[`returns correct API url 3`] = `
Object {
  "method": "GET",
  "url": "https://localhost:8883/v2/viewer/123",
}
`;

exports[`returns correct API url 4`] = `
Object {
  "method": "GET",
  "url": "https://localhost:8883/v2/viewer/123",
}
`;

exports[`returns correct API url when no API version is provided 1`] = `
Object {
  "method": "GET",
  "url": "https://localhost:8883/v2/config/123",
}
`;

exports[`returns correct API url when no API version is provided 2`] = `
Object {
  "method": "POST",
  "url": "https://localhost:8883/v2/config/123",
}
`;

exports[`returns correct API url when no API version is provided 3`] = `
Object {
  "method": "GET",
  "url": "https://localhost:8883/v2/viewer/123",
}
`;

exports[`returns correct API url when no API version is provided 4`] = `
Object {
  "method": "GET",
  "url": "https://localhost:8883/v2/viewer/123",
}
`;
